crates/usd-pyo3/tests/usdValidation/bin/usdchecker/testUsdChecker/bad/refs/world.usd
version https://git-lfs.github.com/spec/v1
oid sha256:7894aca4c342d6506977ace3747a3b0309d88f05a6b1e0f2543d9abef7310453
size 42
